# SwissKnife

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  ROADMAP.md  jenkinsfile  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
SwissKnife/: __init__.py  main.py
SwissKnife/avro/: AvroTransformer.py  AvroTransformer2.py  AvroWriter.py  __init__.py  types.py  utils.py
SwissKnife/avro/appliers/: CastApplier.py  DefaultsApplier.py  RenameApplier.py  TransformApplier.py  __init__.py
SwissKnife/calendar/: WeekUtils.py
SwissKnife/gcloud/: GCloudStorage.py  GCloudStreaming.py  __init__.py
SwissKnife/info/: BucketPath.py  ExecutionEnvironment.py  __init__.py
docker/: entrypoint.sh
docs/: conf.py  index.rst
tests/avro/: AvroWriter.py  test_AvroTransformer.py  test_AvroWriter.py  test_utils.py
tests/calendar/: test_WeekUtils.py
tests/gcloud/: test_GCloudStorage.py  test_GCloudStreaming.py
tests/info/: __init__.py  test_BUCKET_PATH.py  test_CURRENT_ENVIRONMENT.py  test_ExecutionEnvironment.py  test_env.py
