[tool]
[tool.poetry]
name = "UDASwissKnife"
version = "0.9.0"
description = "Utils and common libraries for Python"
classifiers = ["License :: OSI Approved :: MIT License"]
homepage = "https://github.com/urbandataanalytics/SwissKnife"
authors = ["UDARealState Data engineering Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
coverage = "^4.5"
fastavro = {version = "^0.22", optional = true}
google-cloud-storage = {version = "^1.23", optional = true}
nose = "^1.3"
backoff = "^1.10.0"

[tool.poetry.extras]
all = ["fastavro", "google-cloud-storage"]
avro = ["fastavro"]
gcloud = ["google-cloud-storage"]
